# drake_plants

./: README.md
drake_container/: Dockerfile
foo_bazel_installed/: README.md  WORKSPACE  drake.BUILD
foo_bazel_installed/main/: hello.cc  hello.h
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  cubic_roa.cc  region_of_attraction.cc  simulate_balance.cc
src/control/: CMakeLists.txt  lqr_tree.h
src/glider/: CMakeLists.txt  glider.cc  glider.h  simulate.cc  tvlqr.cc  tvlqr.h
